UI - Fix table head cells vertical align

--- a/src/Pum/Bundle/AppBundle/Resources/assets/sass/components/_pum.table.scss
+++ b/src/Pum/Bundle/AppBundle/Resources/assets/sass/components/_pum.table.scss
@@ -13,6 +13,9 @@
         border-color: #EEE;
     }
 }
+.table thead>tr>th {
+    vertical-align: text-bottom;
+}
 
 .table-hover>tbody>tr:hover>td,
 .table-hover>tbody>tr:hover>th {
